added tests, updated docs, and updated retrievement way (#10)